# Magnetar

./: .gitignore  AGENTS.md  Directory.Build.props  Magnetar.sln  Pulsar.sln  README.md  build.bat  build.sh  verify.bat
.github/workflows/: release.yml
.run/: Interim compile All.run.xml  Interim.run.xml  Legacy.run.xml  MagnetarInterim.run.xml  MagnetarLegacy.run.xml  Updater.run.xml
Compiler/: Compiler.csproj  LogFile.cs  PublicizedAssemblies.cs  Publicizer.cs  RoslynCompiler.cs  RoslynReferences.cs  app.config
Docs/: AdminPlugin.md  BranchChanges.md  Build.md  Configuration.md  Index.md  Install.md  Layout.md  Plugins.md  TOC.md  Testing.md  Usage.md  WebUI.md
Docs/data/: README.md  build_manifest.py  build_refgraph.py  generate_docs.py  (+9 more)
Legacy/: Legacy.csproj  Program.cs  app.config  app.manifest  deploy.bat
Modern/: App.axaml  App.axaml.cs  Modern.csproj  Program.cs  deploy.bat
PluginSdk/: PluginSdk.csproj  ServerControl.cs
PluginSdkTests/: ChangeNotificationTests.cs  CommandTests.cs  LoggingTests.cs  PathResolverTests.cs  PluginSdkTests.csproj  SchemaTests.cs  SerializationTests.cs  ServerControlTests.cs  TestConfig.cs
Scripts/: build_steamworks_net.sh  package_magnetar_for_linux.sh
Shared/: AssemblyResolver.cs  Flags.cs  Launcher.cs  Loader.cs  LogFile.cs  PluginList.cs  PluginProgress.cs  Preloader.cs  Shared.csproj  Steam.cs  Tools.cs  Updater.cs
Updater/: Network.cs  Program.cs  Tools.cs  Updater.csproj  Writer.cs  deploy.bat
webui/: pyproject.toml
webui/app/: main.py
webui/tests/: conftest.py  test_admin_plugin.py  test_webui_api.py
(+347 files in other folders)
